--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#services5-x">
+                    <a class="nav-link link text-white display-4" href="index.html#services2-l">
                         availability
                     </a>
                 </li>
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-qxyOwk585I mbr-parallax-background" id="header1-0">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header1 cid-qxyOwk585I mbr-parallax-background" id="header1-0">
 
     
 
@@ -548,7 +548,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GjNr6mhIDHFR1AYmXO/gz02/s0HyxttpED55YfFGJR959SUg/6VAjBqS/yNfKqL2AvmRP/COQTvbJCqqFCgbIFkBSvn889o97wTqd0/iQHGEHlCpDv3RURoMn7Du5EpS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mZOpSvr0w+3wOwnz2g0GRt8xLgMyTJkgo85pTmQSfHe5mLBlLbisAh1a0GhKFGDJI3PEVp+oBl0FxUmYer3wXp0l6xQJFfgoCmlPlNkAsIzClxIOlolmcwDt6M6+IP7D">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
